[package]
name = "buffin_derive"
version = "0.1.1"
edition = "2024"

authors = ["Kim H <buffin-contact@proton.me>"]
categories = ["encoding", "no-std"]
description = "Buffin serialization to/from a binary buffer"
homepage = "https://github.com/segfaultsourcery/buffin"
keywords = ["serialization"]
license = "MIT OR Apache-2.0"
readme = "crates-io.md"
repository = "https://github.com/segfaultsourcery/buffin"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.41"
syn = "2.0.108"

buffin = { version = "0.1.0", path = "../buffin"}
proc-macro2 = "1.0.103"
